# rust_2d_macro

./: Cargo.toml  build.rs
assets/: it.xcf
assets/shaders/: texture.vert
src/: bitsets.rs  main.rs  utils.rs
