[package]
name = "rust_2d_macro"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.140"
macroquad = "0.3"
egui = "0.18.1"
egui-macroquad = "0.11"
slotmap = { version = "1.0.6", features = ["serde"] }
glam = { version = "0.14.0", features = ["serde"] }
rapier2d = { version = "0.14.0", features = ["simd-stable"] }

[features]
default = []
editor = []

[profile.dev.package.rapier2d]
opt-level = 3
